@@ -1,3 +1,7 @@
+2012-04-09 Stanislas Rolland  <typo3@sjbr.ca>
+	* Fix bug #15174 (old bug tracker): Doesn't allow update of user group
+	* Fix bug #10435 (old bug tracker): Error messages when country is changed while no user group is selected in frontend
+
 2012-04-08 Stanislas Rolland  <typo3@sjbr.ca>
 	* Add feature #28370: replyTo feature for mails sent to user
 	* Add feature #6168 (old bug tracker): Support itemsProcFunc property of TCA select and radio fields (Thanks to Jeff Segars)
